# orders_management

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
docker/: .env.example  .env.local.example  Dockerfile  docker-compose.yml  entrypoint.sh
src/: celery_app.py  consumer.py  exception_handlers.py  exceptions.py  main.py  models.py  rabbit.py  redis.py  services.py  settings.py
src/api/: dependencies.py
src/api/auth/: router.py  services.py
src/api/orders/: router.py  schemas.py  services.py  tasks.py
src/api/users/: router.py  schemas.py  services.py
src/auth/: router.py  schemas.py  services.py
src/migrations/: env.py
src/migrations/versions/: 5691cddbcd5a_add_password_hash_field_to_user_model.py  e36930ea3a24_add_user_and_order_models.py
src/security/: jwt.py
