[project]
name = "orders-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "celery>=5.6.2",
    "dotenv>=0.9.9",
    "fastapi>=0.128.5",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
