[project]
name = "orders-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "dotenv>=0.9.9",
    "fastapi>=0.128.5",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn>=0.40.0",
]
